--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -1,9 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".SplashActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/corFundo"
+        android:gravity="center_horizontal"
+        android:text="Bolos Caseiros"
+        android:textColor="@color/corBotao"
+        android:textSize="30sp"
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/corFundo"
+        android:text="Doce Amor"
+        android:textColor="@color/corBotao"
+        android:textSize="50sp" />
+
+
+</LinearLayout>
